# django-configuration-management

./: .env-development  .gitignore  README.md  development-config.yaml  pyproject.toml
.github/workflows/: test.yml
django_configuration_management/: __init__.py  apps.py  aws_utils.py  cli.py  core.py  github_script.py  github_utils.py  iam_script.py  secrets.py  utils.py  validation_utils.py  yml_utils.py
example_project/: config-development.yaml  config-github.json  config-iam.json  config-required.json  deploy-policy.json  development-config.yaml
example_project/frontend/: views.py
example_project/frontend/templates/: index.html
example_project/project/: settings.py  urls.py
tests/: config-test.yaml  test_aws_utils.py  test_django_configuration_management.py  test_github_utils.py  test_yml_utils.py
